--- a/index.html
+++ b/index.html
@@ -5,51 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FlashWash</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-white text-gray-800">
 
   <div class="min-h-screen px-6 py-10">
     <header class="max-w-6xl mx-auto mb-12 text-center">
-      <h1 class="text-4xl font-bold mb-4">Welcome to FlashWash</h1>
-      <p class="text-lg">The Uber of Car Washing in South Africa. One subscription. Multiple car washes. Unlimited convenience.</p>
+      <img src="logo.png" alt="FlashWash Logo" class="mx-auto mb-6 w-32 md:w-48">
+      <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Welcome to FlashWash</h1>
+      <p class="text-lg text-[#38b2ac]">Your car always clean. One subscription. Multiple car washes. Unlimited convenience.</p>
       <div class="flex justify-center mt-6 gap-4">
-        <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-2xl shadow">Join Now</a>
+        <a href="#" class="bg-[#38b2ac] text-white px-6 py-3 rounded-2xl shadow">Join Now</a>
         <a href="#" class="bg-gray-200 px-6 py-3 rounded-2xl">Partner With Us</a>
       </div>
     </header>
 
     <section class="max-w-4xl mx-auto mb-16">
-      <h2 class="text-2xl font-semibold mb-4 text-center">How It Works</h2>
+      <h2 class="text-2xl font-semibold mb-4 text-center text-[#2a3c44]">How It Works</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
         <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2">Choose a Plan</h3>
+          <h3 class="font-semibold mb-2 text-[#38b2ac]">Choose a Plan</h3>
           <p>Select a subscription package that suits your needs.</p>
         </div>
         <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2">Find a Wash</h3>
+          <h3 class="font-semibold mb-2 text-[#38b2ac]">Find a Wash</h3>
           <p>Use our map or list to locate a nearby partner car wash.</p>
         </div>
         <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2">Check In & Clean</h3>
+          <h3 class="font-semibold mb-2 text-[#38b2ac]">Check In & Clean</h3>
           <p>Show your QR code, redeem your wash, and enjoy!</p>
         </div>
       </div>
     </section>
 
     <section class="max-w-6xl mx-auto mb-16 text-center">
-      <h2 class="text-2xl font-semibold mb-4">Why FlashWash?</h2>
+      <h2 class="text-2xl font-semibold mb-4 text-[#2a3c44]">Why FlashWash?</h2>
       <p class="mb-6">We’re building a nationwide network of independent car washes to give you the flexibility you need, with local businesses you trust.</p>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2">Affordable Plans</h4>
+          <h4 class="font-semibold mb-2 text-[#38b2ac]">Affordable Plans</h4>
           <p>Starting from just R99/month.</p>
         </div>
         <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2">Nationwide Partners</h4>
+          <h4 class="font-semibold mb-2 text-[#38b2ac]">Nationwide Partners</h4>
           <p>We’re expanding across major cities in South Africa.</p>
         </div>
         <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2">Support Local</h4>
+          <h4 class="font-semibold mb-2 text-[#38b2ac]">Support Local</h4>
           <p>Your wash helps grow small businesses in your area.</p>
         </div>
       </div>
