--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FlashWash Pricing</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -11,7 +11,6 @@
   </style>
 </head>
 <body class="bg-white text-gray-800">
-
   <div class="min-h-screen px-6 py-10">
     <header class="max-w-6xl mx-auto text-center mb-12">
       <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Choose Your Plan</h1>
@@ -21,7 +20,7 @@
     <section class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
       <div class="border p-6 rounded-2xl shadow hover:shadow-lg transition">
         <h2 class="text-xl font-semibold text-[#2a3c44] mb-2">Basic Plan</h2>
-        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R99/mo</p>
+        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R399/mo</p>
         <ul class="text-sm mb-4 space-y-2">
           <li>✔ 4 washes per month</li>
           <li>✔ Exterior wash only</li>
@@ -31,10 +30,10 @@
       </div>
 
       <div class="border p-6 rounded-2xl shadow-lg scale-105 bg-gray-50">
-        <h2 class="text-xl font-semibold text-[#2a3c44] mb-2">Premium Plan</h2>
-        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R199/mo</p>
+        <h2 class="text-xl font-semibold text-[#2a3c44] mb-2">Standard Plan</h2>
+        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R699/mo</p>
         <ul class="text-sm mb-4 space-y-2">
-          <li>✔ Unlimited washes</li>
+          <li>✔ 6 washes per month</li>
           <li>✔ Interior + exterior cleaning</li>
           <li>✔ Priority access at partner stations</li>
         </ul>
@@ -42,12 +41,12 @@
       </div>
 
       <div class="border p-6 rounded-2xl shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-[#2a3c44] mb-2">Family Plan</h2>
-        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R299/mo</p>
+        <h2 class="text-xl font-semibold text-[#2a3c44] mb-2">Premium Plan</h2>
+        <p class="text-3xl font-bold text-[#38b2ac] mb-4">R999/mo</p>
         <ul class="text-sm mb-4 space-y-2">
-          <li>✔ Covers 2–3 cars</li>
-          <li>✔ Unlimited washes</li>
+          <li>✔ 10 washes per month</li>
           <li>✔ Full service included</li>
+          <li>✔ Covers 2–3 cars</li>
         </ul>
         <button class="bg-[#38b2ac] text-white px-6 py-2 rounded-xl">Subscribe</button>
       </div>
@@ -57,6 +56,5 @@
       &copy; 2025 FlashWash. All rights reserved.
     </footer>
   </div>
-
 </body>
 </html>
