--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Home</title>
+  <title>FlashWash - Pricing</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>body { font-family: 'Roboto', sans-serif; }</style>
@@ -19,9 +19,9 @@
   </ul>
 </nav>
 
-  <header class="max-w-6xl mx-auto mb-12 text-center">
-    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Welcome to FlashWash</h1>
-    <p class="text-lg text-[#38b2ac]">The Uber of Car Washing in South Africa. One subscription. Multiple car washes. Unlimited convenience.</p>
+  <header class="max-w-6xl mx-auto text-center mb-12">
+    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Choose Your Plan</h1>
+    <p class="text-lg text-[#38b2ac]">Affordable subscription packages for every car owner.</p>
   </header>
 </body>
 </html>
