--- a/register.html
+++ b/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FlashWash Partner Registration</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>body { font-family: 'Roboto', sans-serif; }</style>
@@ -19,9 +19,9 @@
   </ul>
 </nav>
 
-  <header class="max-w-6xl mx-auto mb-12 text-center">
-    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Welcome to FlashWash</h1>
-    <p class="text-lg text-[#38b2ac]">The Uber of Car Washing in South Africa. One subscription. Multiple car washes. Unlimited convenience.</p>
+  <header class="max-w-2xl mx-auto text-center mb-12">
+    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Register Your Car Wash</h1>
+    <p class="text-lg text-[#38b2ac]">Join the FlashWash network and grow your business through steady, subscription-based traffic.</p>
   </header>
 </body>
 </html>
