--- a/index.html
+++ b/index.html
@@ -1,27 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Home</title>
+  <meta charset="UTF-8">
+  <title>FlashWash Admin Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <style>body { font-family: 'Roboto', sans-serif; }</style>
+  <script src="="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.4/tabletop.min.js"></script>
+  <style>
+    body { font-family: 'Roboto', sans-serif; }
+    th, td { white-space: nowrap; }
+  </style>
 </head>
 <body class="bg-white text-gray-800 px-6 py-10">
-  
-<nav class="max-w-6xl mx-auto flex justify-between items-center mb-10">
-  <h1 class="text-2xl font-bold text-[#2a3c44]">FlashWash</h1>
-  <ul class="flex gap-6 text-sm font-medium">
-    <li><a href="index.html" class="text-[#2a3c44] hover:underline">Home</a></li>
-    <li><a href="pricing.html" class="text-[#2a3c44] hover:underline">Pricing</a></li>
-    <li><a href="register.html" class="text-[#38b2ac] hover:underline">Register</a></li>
-  </ul>
-</nav>
-
-  <header class="max-w-6xl mx-auto mb-12 text-center">
-    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Welcome to FlashWash</h1>
-    <p class="text-lg text-[#38b2ac]">The Uber of Car Washing in South Africa. One subscription. Multiple car washes. Unlimited convenience.</p>
+  <header class="max-w-6xl mx-auto mb-10">
+    <h1 class="text-3xl font-bold text-[#2a3c44] mb-2">FlashWash Admin Dashboard</h1>
+    <p class="text-[#38b2ac]">View all partner registration submissions in real-time.</p>
   </header>
+
+  <main class="max-w-6xl mx-auto">
+    <div class="overflow-auto">
+      <table class="min-w-full text-sm text-left border-collapse">
+        <thead class="bg-[#2a3c44] text-white">
+          <tr>
+            <th class="px-4 py-2 border">Timestamp</th>
+            <th class="px-4 py-2 border">Car Wash Name</th>
+            <th class="px-4 py-2 border">Owner Name</th>
+            <th class="px-4 py-2 border">Email</th>
+            <th class="px-4 py-2 border">Phone</th>
+            <th class="px-4 py-2 border">Location</th>
+            <th class="px-4 py-2 border">Services</th>
+          </tr>
+        </thead>
+        <tbody id="dashboard-body" class="bg-white">
+          <tr><td colspan="7" class="text-center py-4">Loading...</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+
+  <footer class="mt-16 text-center text-sm text-gray-500">
+    &copy; 2025 FlashWash. All rights reserved.
+  </footer>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      Tabletop.init({
+        key: 'https://docs.google.com/spreadsheets/d/1LYZ38iSWwoQ2B6MZGn5x7dNK1tls2RqV6Y_urFDlHdI/pubhtml',
+        callback: function(data) {
+          const tbody = document.getElementById('dashboard-body');
+          tbody.innerHTML = '';
+          data.forEach(row => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+              <td class="px-4 py-2 border">${row.Timestamp || ''}</td>
+              <td class="px-4 py-2 border">${row['Car Wash Name'] || ''}</td>
+              <td class="px-4 py-2 border">${row['Owner’s Full Name'] || ''}</td>
+              <td class="px-4 py-2 border">${row['Email Address'] || ''}</td>
+              <td class="px-4 py-2 border">${row['Phone Number'] || ''}</td>
+              <td class="px-4 py-2 border">${row['Location'] || ''}</td>
+              <td class="px-4 py-2 border">${row['Services Offered'] || ''}</td>
+            `;
+            tbody.appendChild(tr);
+          });
+        },
+        simpleSheet: true
+      });
+    });
+  </script>
 </body>
 </html>
