--- a/index.html
+++ b/index.html
@@ -1,103 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>FlashWash Admin Dashboard (Protected)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FlashWash - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.4/tabletop.min.js"></script>
   <style>
     body { font-family: 'Roboto', sans-serif; }
-    th, td { white-space: nowrap; }
   </style>
 </head>
-<body class="bg-white text-gray-800 px-6 py-10">
+<body class="bg-white text-gray-800">
 
-  <div id="login" class="max-w-xl mx-auto text-center">
-    <h1 class="text-2xl font-bold mb-4 text-[#2a3c44]">Admin Login</h1>
-    <input type="password" id="adminPass" placeholder="Enter admin password" class="w-full p-3 border rounded mb-4">
-    <button onclick="validate()" class="bg-[#38b2ac] text-white px-6 py-2 rounded-xl">Login</button>
-    <p id="error" class="text-red-600 mt-3 hidden">Incorrect password. Try again.</p>
-  </div>
+  <!-- Navbar -->
+  <header class="bg-[#2a3c44] text-white py-4">
+    <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
+      <div class="flex items-center space-x-4">
+        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10">
+        <span class="text-xl font-bold">FlashWash</span>
+      </div>
+      <nav>
+        <ul class="flex space-x-6 text-sm">
+          <li><a href="#" class="hover:underline">Home</a></li>
+          <li><a href="pricing.html" class="hover:underline">Plans</a></li>
+          <li><a href="partner.html" class="hover:underline">Partner</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <div id="dashboard" class="hidden">
-    <header class="max-w-6xl mx-auto mb-10 flex justify-between items-center">
+  <!-- Hero -->
+  <section class="bg-[#38b2ac] text-white py-20 text-center">
+    <h1 class="text-4xl font-bold mb-4">Wash Your Car Anywhere, Anytime</h1>
+    <p class="text-lg mb-6">Join South Africa’s first multi-location car wash subscription service</p>
+    <div class="space-x-4">
+      <a href="pricing.html" class="bg-white text-[#2a3c44] px-6 py-3 rounded shadow hover:bg-gray-100">Subscribe Now</a>
+      <a href="partner.html" class="border border-white px-6 py-3 rounded hover:bg-white hover:text-[#2a3c44]">Become a Partner</a>
+    </div>
+  </section>
+
+  <!-- How It Works -->
+  <section class="max-w-5xl mx-auto py-16 px-6">
+    <h2 class="text-3xl font-bold text-[#2a3c44] text-center mb-10">How FlashWash Works</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 text-center">
       <div>
-        <h1 class="text-3xl font-bold text-[#2a3c44] mb-1">FlashWash Admin Dashboard</h1>
-        <p class="text-[#38b2ac]">View all partner registration submissions in real-time.</p>
+        <h3 class="text-xl font-semibold mb-2">1. Subscribe</h3>
+        <p>Select a plan that fits your lifestyle and pay monthly.</p>
       </div>
-      <button onclick="logout()" class="bg-red-500 text-white px-4 py-2 rounded-xl hover:bg-red-600">Logout</button>
-    </header>
-
-    <main class="max-w-6xl mx-auto">
-      <div class="overflow-auto">
-        <table class="min-w-full text-sm text-left border-collapse">
-          <thead class="bg-[#2a3c44] text-white">
-            <tr>
-              <th class="px-4 py-2 border">Timestamp</th>
-              <th class="px-4 py-2 border">Car Wash Name</th>
-              <th class="px-4 py-2 border">Owner Name</th>
-              <th class="px-4 py-2 border">Email</th>
-              <th class="px-4 py-2 border">Phone</th>
-              <th class="px-4 py-2 border">Location</th>
-              <th class="px-4 py-2 border">Services</th>
-            </tr>
-          </thead>
-          <tbody id="dashboard-body" class="bg-white">
-            <tr><td colspan="7" class="text-center py-4">Loading...</td></tr>
-          </tbody>
-        </table>
+      <div>
+        <h3 class="text-xl font-semibold mb-2">2. Visit Any Partner</h3>
+        <p>Find a participating car wash in your area.</p>
       </div>
-    </main>
+      <div>
+        <h3 class="text-xl font-semibold mb-2">3. Get Washed</h3>
+        <p>Enjoy convenient, contactless washing at your chosen location.</p>
+      </div>
+    </div>
+  </section>
 
-    <footer class="mt-16 text-center text-sm text-gray-500">
-      &copy; 2025 FlashWash. All rights reserved.
-    </footer>
-  </div>
+  <!-- Benefits -->
+  <section class="bg-gray-100 py-16 px-6">
+    <h2 class="text-3xl font-bold text-[#2a3c44] text-center mb-10">Why Choose FlashWash?</h2>
+    <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="p-6 bg-white rounded shadow">
+        <h4 class="font-bold mb-2">Save Time</h4>
+        <p>Access multiple locations — no more queues or delays.</p>
+      </div>
+      <div class="p-6 bg-white rounded shadow">
+        <h4 class="font-bold mb-2">Support Local</h4>
+        <p>We partner with local car washes to grow communities.</p>
+      </div>
+      <div class="p-6 bg-white rounded shadow">
+        <h4 class="font-bold mb-2">Track Usage</h4>
+        <p>View how many washes you've used each month.</p>
+      </div>
+      <div class="p-6 bg-white rounded shadow">
+        <h4 class="font-bold mb-2">Eco-Friendly</h4>
+        <p>Our partners use water-conscious technology and methods.</p>
+      </div>
+    </div>
+  </section>
 
-  <script>
-    const PASSWORD = "flashadmin123";
+  <!-- Footer -->
+  <footer class="text-center text-sm text-gray-500 py-6">
+    &copy; 2025 FlashWash. All rights reserved.
+  </footer>
 
-    function validate() {
-      const input = document.getElementById("adminPass").value;
-      if (input === PASSWORD) {
-        document.getElementById("login").style.display = "none";
-        document.getElementById("dashboard").style.display = "block";
-        loadDashboard();
-      } else {
-        document.getElementById("error").classList.remove("hidden");
-      }
-    }
-
-    function logout() {
-      document.getElementById("dashboard").style.display = "none";
-      document.getElementById("login").style.display = "block";
-      document.getElementById("adminPass").value = "";
-    }
-
-    function loadDashboard() {
-      Tabletop.init({
-        key: 'https://docs.google.com/spreadsheets/d/1LYZ38iSWwoQ2B6MZGn5x7dNK1tls2RqV6Y_urFDlHdI/pubhtml',
-        callback: function(data) {
-          const tbody = document.getElementById('dashboard-body');
-          tbody.innerHTML = '';
-          data.forEach(row => {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-              <td class="px-4 py-2 border">${row.Timestamp || ''}</td>
-              <td class="px-4 py-2 border">${row['Car Wash Name'] || ''}</td>
-              <td class="px-4 py-2 border">${row['Owner’s Full Name'] || ''}</td>
-              <td class="px-4 py-2 border">${row['Email Address'] || ''}</td>
-              <td class="px-4 py-2 border">${row['Phone Number'] || ''}</td>
-              <td class="px-4 py-2 border">${row['Location'] || ''}</td>
-              <td class="px-4 py-2 border">${row['Services Offered'] || ''}</td>
-            `;
-            tbody.appendChild(tr);
-          });
-        },
-        simpleSheet: true
-      });
-    }
-  </script>
 </body>
 </html>
