--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#" class="hover:underline">Home</a></li>
           <li><a href="pricing.html" class="hover:underline">Plans</a></li>
           <li><a href="partner.html" class="hover:underline">Partner</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
         </ul>
       </nav>
     </div>
