--- a/pricing.html
+++ b/pricing.html
@@ -3,25 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Pricing</title>
+  <title>FlashWash - Choose Your Plan</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <style>body { font-family: 'Roboto', sans-serif; }</style>
+  <style>
+    body { font-family: 'Roboto', sans-serif; }
+  </style>
 </head>
-<body class="bg-white text-gray-800 px-6 py-10">
-  
-<nav class="max-w-6xl mx-auto flex justify-between items-center mb-10">
-  <h1 class="text-2xl font-bold text-[#2a3c44]">FlashWash</h1>
-  <ul class="flex gap-6 text-sm font-medium">
-    <li><a href="index.html" class="text-[#2a3c44] hover:underline">Home</a></li>
-    <li><a href="pricing.html" class="text-[#2a3c44] hover:underline">Pricing</a></li>
-    <li><a href="register.html" class="text-[#38b2ac] hover:underline">Register</a></li>
-  </ul>
-</nav>
+<body class="bg-white text-gray-800">
 
-  <header class="max-w-6xl mx-auto text-center mb-12">
-    <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Choose Your Plan</h1>
-    <p class="text-lg text-[#38b2ac]">Affordable subscription packages for every car owner.</p>
+  <!-- Navigation Bar -->
+  <header class="bg-[#2a3c44] text-white py-4">
+    <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
+      <div class="flex items-center space-x-4">
+        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10">
+        <span class="text-xl font-bold">FlashWash</span>
+      </div>
+      <nav>
+        <ul class="flex space-x-6 text-sm">
+          <li><a href="index.html" class="hover:underline">Home</a></li>
+          <li><a href="pricing.html" class="underline font-bold">Plans</a></li>
+          <li><a href="partner.html" class="hover:underline">Partner</a></li>
+          <li><a href="faq.html" class="hover:underline">FAQ</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+
+  <!-- Plans Section -->
+  <main class="max-w-5xl mx-auto py-16 px-6 text-center">
+    <h1 class="text-4xl font-bold text-[#2a3c44] mb-4">Choose Your Plan</h1>
+    <p class="text-gray-600 mb-10">Affordable subscription packages for every car owner.</p>
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Basic Plan -->
+      <div class="border rounded-lg p-6 shadow">
+        <h2 class="text-2xl font-semibold mb-2">🧼 Basic</h2>
+        <p class="text-gray-600 mb-4">4 washes per month</p>
+        <p class="text-3xl font-bold text-[#2a3c44] mb-4">R399</p>
+        <form action="https://www.payfast.co.za/eng/process" method="POST">
+          <input type="hidden" name="merchant_id" value="30720513">
+          <input type="hidden" name="merchant_key" value="dct9ol6to9bzw">
+          <input type="hidden" name="amount" value="399.00">
+          <input type="hidden" name="item_name" value="FlashWash Basic Plan">
+          <input type="hidden" name="return_url" value="https://flashwash.vercel.app/">
+          <input type="hidden" name="cancel_url" value="https://flashwash.vercel.app/pricing.html">
+          <input type="hidden" name="notify_url" value="https://flashwash.vercel.app/ipn">
+          <button type="submit" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe</button>
+        </form>
+      </div>
+
+      <!-- Standard Plan -->
+      <div class="border rounded-lg p-6 shadow">
+        <h2 class="text-2xl font-semibold mb-2">✨ Standard</h2>
+        <p class="text-gray-600 mb-4">6 washes per month</p>
+        <p class="text-3xl font-bold text-[#2a3c44] mb-4">R699</p>
+        <form action="https://www.payfast.co.za/eng/process" method="POST">
+          <input type="hidden" name="merchant_id" value="30720513">
+          <input type="hidden" name="merchant_key" value="dct9ol6to9bzw">
+          <input type="hidden" name="amount" value="699.00">
+          <input type="hidden" name="item_name" value="FlashWash Standard Plan">
+          <input type="hidden" name="return_url" value="https://flashwash.vercel.app/">
+          <input type="hidden" name="cancel_url" value="https://flashwash.vercel.app/pricing.html">
+          <input type="hidden" name="notify_url" value="https://flashwash.vercel.app/ipn">
+          <button type="submit" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe</button>
+        </form>
+      </div>
+
+      <!-- Premium Plan -->
+      <div class="border rounded-lg p-6 shadow">
+        <h2 class="text-2xl font-semibold mb-2">👨‍👩‍👧‍👦 Premium</h2>
+        <p class="text-gray-600 mb-4">10 washes per month</p>
+        <p class="text-3xl font-bold text-[#2a3c44] mb-4">R999</p>
+        <form action="https://www.payfast.co.za/eng/process" method="POST">
+          <input type="hidden" name="merchant_id" value="30720513">
+          <input type="hidden" name="merchant_key" value="dct9ol6to9bzw">
+          <input type="hidden" name="amount" value="999.00">
+          <input type="hidden" name="item_name" value="FlashWash Premium Plan">
+          <input type="hidden" name="return_url" value="https://flashwash.vercel.app/">
+          <input type="hidden" name="cancel_url" value="https://flashwash.vercel.app/pricing.html">
+          <input type="hidden" name="notify_url" value="https://flashwash.vercel.app/ipn">
+          <button type="submit" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="text-center text-sm text-gray-500 py-6">
+    &copy; 2025 FlashWash. All rights reserved.
+  </footer>
+
 </body>
 </html>
