--- a/index.html
+++ b/index.html
@@ -7,79 +7,45 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Roboto', sans-serif; }
+    @keyframes spin-slow {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+    .animate-spin-slow {
+      animation: spin-slow 10s linear infinite;
+    }
   </style>
 </head>
 <body class="bg-white text-gray-800">
 
-  <!-- Navbar -->
+  <!-- Navigation Bar -->
   <header class="bg-[#2a3c44] text-white py-4">
     <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
       <div class="flex items-center space-x-4">
-        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10">
+        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10 animate-spin-slow">
         <span class="text-xl font-bold">FlashWash</span>
       </div>
       <nav>
         <ul class="flex space-x-6 text-sm">
-          <li><a href="#" class="hover:underline">Home</a></li>
+          <li><a href="index.html" class="underline font-bold">Home</a></li>
           <li><a href="pricing.html" class="hover:underline">Plans</a></li>
           <li><a href="partner.html" class="hover:underline">Partner</a></li>
+          <li><a href="faq.html" class="hover:underline">FAQ</a></li>
           <li><a href="contact.html" class="hover:underline">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="bg-[#38b2ac] text-white py-20 text-center">
-    <h1 class="text-4xl font-bold mb-4">Wash Your Car Anywhere, Anytime</h1>
-    <p class="text-lg mb-6">Join South Africa’s first multi-location car wash subscription service</p>
+  <!-- Hero Section -->
+  <main class="text-center py-20 px-6">
+    <h1 class="text-5xl font-bold text-[#2a3c44] mb-6">Welcome to FlashWash</h1>
+    <p class="text-lg text-gray-600 mb-8">Your subscription-based car wash network</p>
     <div class="space-x-4">
-      <a href="pricing.html" class="bg-white text-[#2a3c44] px-6 py-3 rounded shadow hover:bg-gray-100">Subscribe Now</a>
-      <a href="partner.html" class="border border-white px-6 py-3 rounded hover:bg-white hover:text-[#2a3c44]">Become a Partner</a>
+      <a href="pricing.html" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe Now</a>
+      <a href="partner.html" class="bg-[#2a3c44] text-white px-6 py-3 rounded hover:bg-[#1f2e35]">Become a Partner</a>
     </div>
-  </section>
-
-  <!-- How It Works -->
-  <section class="max-w-5xl mx-auto py-16 px-6">
-    <h2 class="text-3xl font-bold text-[#2a3c44] text-center mb-10">How FlashWash Works</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 text-center">
-      <div>
-        <h3 class="text-xl font-semibold mb-2">1. Subscribe</h3>
-        <p>Select a plan that fits your lifestyle and pay monthly.</p>
-      </div>
-      <div>
-        <h3 class="text-xl font-semibold mb-2">2. Visit Any Partner</h3>
-        <p>Find a participating car wash in your area.</p>
-      </div>
-      <div>
-        <h3 class="text-xl font-semibold mb-2">3. Get Washed</h3>
-        <p>Enjoy convenient, contactless washing at your chosen location.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Benefits -->
-  <section class="bg-gray-100 py-16 px-6">
-    <h2 class="text-3xl font-bold text-[#2a3c44] text-center mb-10">Why Choose FlashWash?</h2>
-    <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="p-6 bg-white rounded shadow">
-        <h4 class="font-bold mb-2">Save Time</h4>
-        <p>Access multiple locations — no more queues or delays.</p>
-      </div>
-      <div class="p-6 bg-white rounded shadow">
-        <h4 class="font-bold mb-2">Support Local</h4>
-        <p>We partner with local car washes to grow communities.</p>
-      </div>
-      <div class="p-6 bg-white rounded shadow">
-        <h4 class="font-bold mb-2">Track Usage</h4>
-        <p>View how many washes you've used each month.</p>
-      </div>
-      <div class="p-6 bg-white rounded shadow">
-        <h4 class="font-bold mb-2">Eco-Friendly</h4>
-        <p>Our partners use water-conscious technology and methods.</p>
-      </div>
-    </div>
-  </section>
+  </main>
 
   <!-- Footer -->
   <footer class="text-center text-sm text-gray-500 py-6">
