--- a/index.html
+++ b/index.html
@@ -3,69 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash</title>
+  <title>FlashWash - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
+    body { font-family: 'Roboto', sans-serif; }
+    @keyframes spin-slow {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+    .animate-spin-slow {
+      animation: spin-slow 10s linear infinite;
     }
   </style>
 </head>
 <body class="bg-white text-gray-800">
 
-  <div class="min-h-screen px-6 py-10">
-    <header class="max-w-6xl mx-auto mb-12 text-center">
-      <img src="logo.png" alt="FlashWash Logo" class="mx-auto mb-6 w-32 md:w-48">
-      <h1 class="text-4xl font-bold mb-4 text-[#2a3c44]">Welcome to FlashWash</h1>
-      <p class="text-lg text-[#38b2ac]">Your car always clean. One subscription. Multiple car washes. Unlimited convenience.</p>
-      <div class="flex justify-center mt-6 gap-4">
-        <a href="#" class="bg-[#38b2ac] text-white px-6 py-3 rounded-2xl shadow">Join Now</a>
-        <a href="#" class="bg-gray-200 px-6 py-3 rounded-2xl">Partner With Us</a>
+  <!-- Navigation Bar -->
+  <header class="bg-[#2a3c44] text-white py-4">
+    <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
+      <div class="flex items-center space-x-4">
+        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10 animate-spin-slow">
+        <span class="text-xl font-bold">FlashWash</span>
       </div>
-    </header>
+      <nav>
+        <ul class="flex space-x-6 text-sm">
+          <li><a href="index.html" class="underline font-bold">Home</a></li>
+          <li><a href="pricing.html" class="hover:underline">Plans</a></li>
+          <li><a href="partner.html" class="hover:underline">Partner</a></li>
+          <li><a href="faq.html" class="hover:underline">FAQ</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section class="max-w-4xl mx-auto mb-16">
-      <h2 class="text-2xl font-semibold mb-4 text-center text-[#2a3c44]">How It Works</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
-        <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2 text-[#38b2ac]">Choose a Plan</h3>
-          <p>Select a subscription package that suits your needs.</p>
-        </div>
-        <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2 text-[#38b2ac]">Find a Wash</h3>
-          <p>Use our map or list to locate a nearby partner car wash.</p>
-        </div>
-        <div class="p-4 border rounded-xl shadow">
-          <h3 class="font-semibold mb-2 text-[#38b2ac]">Check In & Clean</h3>
-          <p>Show your QR code, redeem your wash, and enjoy!</p>
-        </div>
-      </div>
-    </section>
+  <!-- Hero Section -->
+  <main class="text-center py-20 px-6">
+    <h1 class="text-5xl font-bold text-[#2a3c44] mb-6">Welcome to FlashWash</h1>
+    <p class="text-lg text-gray-600 mb-8">Your subscription-based car wash network</p>
+    <div class="space-x-4">
+      <a href="pricing.html" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe Now</a>
+      <a href="partner.html" class="bg-[#2a3c44] text-white px-6 py-3 rounded hover:bg-[#1f2e35]">Become a Partner</a>
+    </div>
+  </main>
 
-    <section class="max-w-6xl mx-auto mb-16 text-center">
-      <h2 class="text-2xl font-semibold mb-4 text-[#2a3c44]">Why FlashWash?</h2>
-      <p class="mb-6">We’re building a nationwide network of independent car washes to give you the flexibility you need, with local businesses you trust.</p>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2 text-[#38b2ac]">Affordable Plans</h4>
-          <p>Starting from just R99/month.</p>
-        </div>
-        <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2 text-[#38b2ac]">Nationwide Partners</h4>
-          <p>We’re expanding across major cities in South Africa.</p>
-        </div>
-        <div class="p-4 border rounded-xl">
-          <h4 class="font-semibold mb-2 text-[#38b2ac]">Support Local</h4>
-          <p>Your wash helps grow small businesses in your area.</p>
-        </div>
-      </div>
-    </section>
-
-    <footer class="text-center text-sm text-gray-500">
-      &copy; 2025 FlashWash. All rights reserved.
-    </footer>
-  </div>
+  <!-- Footer -->
+  <footer class="text-center text-sm text-gray-500 py-6">
+    &copy; 2025 FlashWash. All rights reserved.
+  </footer>
 
 </body>
 </html>
