--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact FlashWash</title>
+  <title>FlashWash - Contact Us</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Roboto', sans-serif; }
@@ -33,13 +33,11 @@
   <!-- Contact Section -->
   <main class="max-w-xl mx-auto py-16 px-6">
     <h1 class="text-3xl font-bold text-[#2a3c44] mb-6 text-center">Contact Us</h1>
-    <p class="text-center text-gray-600 mb-4">Have questions or need support? Reach out using the form below or email us at <a href="mailto:support@flashwash.co.za" class="text-[#38b2ac]">support@flashwash.co.za</a>.<br><span class="block text-center">Or message us on <a href="https://wa.me/27711234567" class="text-[#38b2ac] font-semibold">WhatsApp: +27 71 123 4567</a></span></p>
-    <form action="https://formsubmit.co/florissantkapama@gmail.com" method="POST" class="space-y-4">
-      <input type="text" name="name" placeholder="Full Name" required class="w-full p-3 border rounded">
-      <input type="email" name="email" placeholder="Email Address" required class="w-full p-3 border rounded">
-      <textarea name="message" placeholder="Your Message" rows="5" class="w-full p-3 border rounded" required></textarea>
-      <button type="submit" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Send Message</button>
-    </form>
+    <div class="space-y-4 text-center">
+      <p><strong>WhatsApp or Call:</strong> <a href="https://wa.me/27736040171" class="text-[#38b2ac] hover:underline">+27 73 604 0171</a></p>
+      <p><strong>Phone 2:</strong> <a href="tel:+27674107796" class="text-[#2a3c44] hover:underline">+27 67 410 7796</a></p>
+      <p><strong>Email:</strong> <a href="mailto:florissantkapama@gmail.com" class="text-[#2a3c44] hover:underline">florissantkapama@gmail.com</a></p>
+    </div>
   </main>
 
   <!-- Footer -->
