--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Home</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { font-family: 'Roboto', sans-serif; }
-    @keyframes drive-in {
-      0% { transform: translateX(-150%); opacity: 0; }
-      60% { transform: translateX(10%); opacity: 1; }
-      100% { transform: translateX(0); }
-    }
-    .drive-in {
-      animation: drive-in 2s ease-out forwards;
-    }
-  </style>
-</head>
-<body class="bg-white text-gray-800">
+import Head from 'next/head';
 
-  <!-- Navigation Bar -->
-  <header class="bg-[#2a3c44] text-white py-4">
-    <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
-      <div class="flex items-center space-x-4">
-        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10 drive-in">
-        <span class="text-xl font-bold">FlashWash</span>
-      </div>
-      <nav>
-        <ul class="flex space-x-6 text-sm">
-          <li><a href="index.html" class="underline font-bold">Home</a></li>
-          <li><a href="pricing.html" class="hover:underline">Plans</a></li>
-          <li><a href="partner.html" class="hover:underline">Partner</a></li>
-          <li><a href="faq.html" class="hover:underline">FAQ</a></li>
-          <li><a href="contact.html" class="hover:underline">Contact</a></li>
-        </ul>
-      </nav>
+export default function Home() {
+  return (
+    <div>
+      <Head>
+        <title>FlashWash – Your Car. Always Clean.</title>
+        <meta name="description" content="The #1 car wash subscription platform in South Africa" />
+      </Head>
+
+      {/* Hero */}
+      <section className="bg-gradient-to-r from-green-400 to-blue-500 text-white py-20 text-center">
+        <h1 className="text-5xl font-bold mb-4">Your Car. Always Clean.</h1>
+        <p className="text-xl mb-6">Join South Africa’s #1 car wash subscription network</p>
+        <a href="#pricing" className="bg-white text-green-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-200">Subscribe Now</a>
+      </section>
+
+      {/* How It Works */}
+      <section className="py-16 text-center bg-gray-100">
+        <h2 className="text-3xl font-bold mb-8">How It Works</h2>
+        <div className="flex flex-col md:flex-row justify-center gap-8 px-4">
+          <div><h3 className="font-bold">1. Subscribe</h3><p>Pick your plan</p></div>
+          <div><h3 className="font-bold">2. Find Partner</h3><p>Use our app to find nearby car washes</p></div>
+          <div><h3 className="font-bold">3. Get Washed</h3><p>Scan & wash – that easy!</p></div>
+        </div>
+      </section>
+
+      {/* Pricing */}
+      <section id="pricing" className="py-16 bg-white text-center">
+        <h2 className="text-3xl font-bold mb-8">Our Plans</h2>
+        <div className="grid grid-cols-1 md:grid-cols-3 gap-8 px-6">
+          <div className="shadow-lg p-6 rounded-lg border">
+            <h3 className="text-xl font-bold">Basic</h3>
+            <p className="text-gray-600 mb-2">R99/month</p>
+            <p>2 washes/month</p>
+          </div>
+          <div className="shadow-lg p-6 rounded-lg border">
+            <h3 className="text-xl font-bold">Premium</h3>
+            <p className="text-gray-600 mb-2">R199/month</p>
+            <p>4 washes/month + priority access</p>
+          </div>
+          <div className="shadow-lg p-6 rounded-lg border">
+            <h3 className="text-xl font-bold">Family</h3>
+            <p className="text-gray-600 mb-2">R299/month</p>
+            <p>Up to 3 vehicles</p>
+          </div>
+        </div>
+      </section>
+
+      {/* Footer */}
+      <footer className="bg-gray-800 text-white py-6 text-center mt-12">
+        <p>&copy; 2025 FlashWash. All rights reserved.</p>
+        <p>Email: info@flashwash.co.za</p>
+      </footer>
     </div>
-  </header>
-
-  <!-- Hero Section -->
-  <main class="text-center py-20 px-6">
-    <h1 class="text-5xl font-bold text-[#2a3c44] mb-6">Welcome to FlashWash</h1>
-    <p class="text-lg text-gray-600 mb-8">Your subscription-based car wash network</p>
-    <div class="space-x-4">
-      <a href="pricing.html" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe Now</a>
-      <a href="partner.html" class="bg-[#2a3c44] text-white px-6 py-3 rounded hover:bg-[#1f2e35]">Become a Partner</a>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="text-center text-sm text-gray-500 py-6">
-    &copy; 2025 FlashWash. All rights reserved.
-  </footer>
-
-</body>
-</html>
+  );
+}
