--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
-      padding: 0;
       background-color: #f8f9fa;
       color: #333;
     }
@@ -76,6 +75,11 @@
     .card:hover {
       transform: translateY(-5px);
     }
+    .card img {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    }
     .card h3 {
       margin-bottom: 10px;
       color: #003366;
@@ -115,16 +119,19 @@
     <h2>How It Works</h2>
     <div class="three-columns">
       <div class="card">
+        <img src="https://images.unsplash.com/photo-1611858262385-fd82cf9d08b4?auto=format&fit=crop&w=800&q=80" alt="Subscribe step">
         <h3>1. Subscribe</h3>
-        <p>Choose a monthly plan that fits your needs.</p>
+        <p>Choose a monthly plan that fits your lifestyle.</p>
       </div>
       <div class="card">
+        <img src="https://images.unsplash.com/photo-1608652069580-9f3f22e1ebf9?auto=format&fit=crop&w=800&q=80" alt="Find a car wash">
         <h3>2. Find a Car Wash</h3>
-        <p>Use the app to locate the nearest partner wash station.</p>
+        <p>Use our app to locate partner wash stations near you.</p>
       </div>
       <div class="card">
+        <img src="https://images.unsplash.com/photo-1606225883893-d304dbe6a5c4?auto=format&fit=crop&w=800&q=80" alt="Scan and Wash">
         <h3>3. Scan & Wash</h3>
-        <p>Show your QR code and get your car washed, cash-free.</p>
+        <p>Show your QR code and get your car washed. Easy and cash-free!</p>
       </div>
     </div>
   </section>
